--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-search",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sad-villani-c4e623.netlify.app/demos/movie-search",
+  "homepage": "/build",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
