--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie-search",
   "version": "0.1.0",
   "private": true,
-  "homepage": "demos/movie-search",
+  "homepage": "",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -13,7 +13,7 @@
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
